# rtc-web

./: .gitmodules  docker-compose.yaml
.github/workflows/: api-ci.yaml
api/: Dockerfile  docker-compose.yaml  env.sample  pyproject.toml  redis_om.py  start_server.sh  tox.ini
api/app/: app.py  config.py  constants.py  db.py  logger.py  main.py  store.py
api/app/dependencies/: auth.py  websocket.py
api/app/forms/: register_fom.py
api/app/models/: __init__.py  user.py
api/app/routes/: __init__.py  auth.py  ws.py
api/app/schemas/: __init__.py  tokens.py  user.py  ws.py
api/app/services/: auth.py  types.py  web_socket.py  web_socket_connection.py  web_socket_messageing.py  web_socket_messaging.py
api/app/utils/: custom_generate_unique_id.py  hash.py  uuid.py
api/migrations/: env.py
api/migrations/versions/: bb3394a86567_default_conn_id.py  e70b248b96ff_init.py
api/pg-backup/: Readme.md  install.sh  restore.sh
api/tests/: conftest.py  mock_data.py  test_auth.py  test_websocket.py
front/: index.html  package.json  tailwind.config.cjs
front/.storybook/: main.cjs  preview.cjs
front/src/: App.tsx  configureApiService.ts  main.tsx  strings.ts
front/src/components/ErrorMessage/: ErrorMessage.tsx
front/src/components/Title/: Title.tsx
front/src/customHooks/: useAuthCheck.ts
front/src/navigation/: router.tsx
front/src/pages/Auth/: Auth.stories.tsx  Auth.tsx
front/src/pages/Intro/: Intro.tsx
front/src/pages/Main/: Main.tsx
front/src/providers/QueryProvider/: QueryProvider.tsx
front/src/services/: index.ts
(+16 files in other folders)
